istio-teaching/destinationrules/trafficPolicy/portLevelSettings/tls/details-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: docker.io/istio/examples-bookinfo-details-v1:1.16.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: secret-vol
          mountPath: /etc/istio/ingressgateway-certs
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
      volumes:
      - name: tmp
        emptyDir: {}
      - name: secret-vol
        secret:
          secretName: productpage-credential
