istio-teaching/destinationrules/trafficPolicy/portLevelSettings/tls/dr-eastgateway-mode-istio-mutual.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: istio-eastwestgateway
spec:
  host: istio-eastwestgateway.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
