istio-teaching/destinationrules/trafficPolicy/portLevelSettings/tls/dr-productpage-mode-disable.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 9080
      loadBalancer:
        simple: RANDOM
      tls:
        mode: DISABLE
