istio-teaching/destinationrules/trafficPolicy/portLevelSettings/tls/dr-productpage-subjectAltNames.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 9080
      loadBalancer:
        simple: RANDOM
      tls:
        mode: SIMPLE
        caCertificates: /etc/my-cert/ca.crt
        sni: productpage.istio.svc.cluster.local
        #sni: outbound_.9080_.v1_.productpage.istio.svc.cluster.local
        subjectAltNames: 
        - spiffe://cluster.local/ns/istio/sa/bookinfo-productpage
